--- a/po/zh_CN/LC_MESSAGES/zh_CN.po
+++ b/po/zh_CN/LC_MESSAGES/zh_CN.po
@@ -12,7 +12,7 @@ msgstr ""
 "PO-Revision-Date: 2024-06-13 11:00+0200\n"
 "Last-Translator: MLSci <mi6w.io@gmail.com>\n"
 "Language-Team: \n"
-"Language: zh\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
