--- a/po/it_IT/LC_MESSAGES/it_IT.po
+++ b/po/it_IT/LC_MESSAGES/it_IT.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: boxbuddyRS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-06-14 07:12+0000\n"
-"PO-Revision-Date: 2024-08-31 10:59+0200\n"
+"PO-Revision-Date: 2024-11-16 20:49+0200\n"
 "Last-Translator: Albano Battistella <albanobattistella@gmail.com>\n"
 "Language-Team: \n"
 "Language: it_IT\n"
@@ -356,8 +356,9 @@ msgstr "Flatpak in modalità sandbox rilevato"
 msgid ""
 "Distrobox can already access folders in your home directory - even if you "
 "have specified a custom home folder"
-msgstr"Distrobox può già accedere alle cartelle nella tua directory home, anche se hai specificato una cartella home personalizzata" ""
-
+msgstr""
+"Distrobox può già accedere alle cartelle nella tua directory home, anche se hai "
+"specificato una cartella home personalizzata"
 
 #. TRANSLATORS: Popup Heading
 #: src/main.rs:1291
@@ -415,7 +416,7 @@ msgid ""
 "folder, or allow filesystem access. Please see the <a href='https://dvlv."
 "github.io/BoxBuddyRS/tips'>documentation for details.</a>"
 msgstr ""
-Questo file non è accessibile a Flatpak: copialo nella cartella Download "
+"Questo file non è accessibile a Flatpak: copialo nella cartella Download "
 "o consenti l'accesso al filesystem. Consulta la <a href='https://dvlv."
 "github.io/BoxBuddyRS/tips'>documentazione per i dettagli.</a>"
 
